<resources>
    <string name="app_name">友兰智能管理平台</string>
    <string name="sign_in">签到</string>
    <string name="sign_sbdk">打卡</string>
    <string name="sign_wqdk">外勤打卡</string>
    <string name="sign_wcsy">外出事由</string>
    <string name="sign_lytx">理由填写</string>
    <string name="sign_record">打卡记录</string>
    <string name="sign_ly_hint">1~300个字符</string>
    <string name="sign_location">定位信息</string>
    <string name="sign_qtnr">其他内容</string>
    <string name="submit">提交</string>
    <string name="sign_selecte_location">可选300米范围内的地点</string>
    <string name="leave_ly">请假理由</string>
    <string name="leave_sq">请假申请</string>
    <string name="leave_mine_list">请假记录</string>
    <string name="leave_approve_list">审批</string>
    <string name="splc">审批流程</string>
    <string name="sprw">审批任务</string>
    <string-array name="chinese_week_string_array">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_xxfw">学校服务</string>
    <string name="homg_wdkj">我的空间</string>
    <string name="school_news">学校新闻</string>
    <string name="home_more">查看更多</string>
    <string name="mobile_office">移动办公</string>
    <string name="sfwlrydj">是否外来人员登记</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="back_bedroom_hqly">回寝事由</string>
    <string name="back_bedroom_image">附件图片</string>
    <string name="back_bedroom_dj">回寝登记</string>
    <string name="back_bedroom_list">回寝登记列表</string>
    <string name="search">搜索</string>
    <string name="srgjz">输入关键字</string>
    <string name="select_student">选择学生</string>
    <string name="performance">绩效打分</string>
    <string name="performance_rank">绩效成绩</string>
    <string name="ziping">自评:</string>
    <string name="khxq_num">分值:</string>
    <string name="one">1</string>
    <string name="kaohexz">考核细则</string>
    <string name="no_notice">暂无通知</string>
    <string name="back_bedroom_title">%1$s的回寝提交</string>
    <string name="back_bedroom_reason">回寝理由：%1$s</string>
    <string name="leave_reason">请假理由：%1$s</string>
    <string name="back_bedroom_teacher">发起老师：%1$s</string>
    <string name="start_time">开始时间：%1$s</string>
    <string name="end_time">结束时间：%1$s</string>
    <string name="details">详情</string>
    <string name="yhdl">用户登录</string>
    <string name="qsrzh">请输入账号</string>
    <string name="login">登&#160;&#160;录</string>
    <string name="yl_school">兴县友兰高级中学</string>
    <string name="author">作者：%1$s</string>
    <string name="add_time">发布时间：%1$s</string>
    <string name="views">浏览次数：%1$s</string>
    <string name="news_details">新闻详情</string>
    <string name="gg_details">公告详情</string>
    <string name="face">人脸认证</string>
    <string name="mine">我的</string>
    <string name="grxx">个人信息</string>
    <string name="zcrlrz">注册人脸认证</string>
    <string name="xgmm">修改密码</string>
    <string name="tcdl">退出登录</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="email">邮箱</string>
    <string name="zw">职务</string>
    <string name="qd">确定</string>
    <string name="xg">修改</string>
    <string name="qsrmm">请输入原密码</string>
    <string name="qsrxmm">请输入新密码</string>
    <string name="qzcsrmm">请再次输入新密码</string>
    <string name="bm">部门</string>
    <string name="lxdh">联系电话</string>
    <string name="km">科目</string>
    <string name="xgdh">修改联系电话</string>
    <string name="takepic">拍照</string>
    <string name="update">上传</string>
    <string name="xglxfs">修改联系方式</string>
    <string name="qsrsjhm">请输入手机号码</string>
    <string name="qsryx">请输入邮箱</string>
    <string name="qshirumima">请输入密码</string>
    <string name="huifu">回复</string>
    <string name="tzxq">通知详情</string>
    <string name="xq">详情</string>
    <string name="tzlb">通知列表</string>
    <string name="yfbtzlb">已发布通知列表</string>
    <string name="srhfnr">输入回复内容</string>
    <string name="srnr">输入内容</string>
    <string name="bt">标题</string>
    <string name="qsrbt">请输入标题</string>
    <string name="tsyh">推送用户</string>
    <string name="tjyh">添加用户</string>
    <string name="sfkqhf">是否开启回复</string>
    <string name="fbzt">发布状态</string>
    <string name="cgx">草稿箱</string>
    <string name="fb">发布</string>
    <string name="sczp">上传照片</string>
    <string name="xzzp">选择照片</string>
    <string name="scsp">上传视频</string>
    <string name="xzsp">选择视频</string>
    <string name="fbtz">发布通知</string>
    <string name="tsnr">推送内容</string>
    <string name="delete">删除</string>
    <string name="gxsm">更新说明：</string>
    <string name="update_now">立即更新</string>
    <string name="update_cancel">暂不更新</string>
    <string name="register">注册</string>
    <string name="queding">确定</string>
    <string name="dkxtjwcsy">打卡先添加外出事由</string>
    <string name="approve_rwlx">任务类型：%1$s</string>
    <string name="approve_fqr">发起人：%1$s</string>
    <string name="approve_spjd">审批节点：%1$s</string>
    <string name="bl">办理</string>
    <string name="wp">委派</string>
    <string name="approveLy">审批理由</string>
    <string name="bh">驳回</string>
    <string name="beizhu">备注：</string>
    <string name="shuliang">数量:</string>
    <string name="fj">附件</string>
    <string name="in_school">入校登记</string>
    <string name="out_school">出校登记</string>
    <string name="outsider">外来人员登记</string>
    <string name="id_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名：%1$s</string>
    <string name="id_sex">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别：%1$s</string>
    <string name="id_address">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址：%1$s</string>
    <string name="in_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名：%1$s</string>
    <string name="in_sex">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别：%1$s</string>
    <string name="in_phone">家长电话：%1$s</string>
    <string name="in_id">学&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号：%1$s</string>
    <string name="in_card">卡&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号：%1$s</string>
    <string name="in_dormitory">宿&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;舍</string>
    <string name="in_grade">年&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;级：%1$s</string>
    <string name="in_class">班&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;级：%1$s</string>
    <string name="in_bz">备注</string>
    <string name="id_birth">出生年月：%1$s</string>
    <string name="id_idcard">证件号码：%1$s</string>
    <string name="nfc_read_idcard">请在NFC区域放置身份证</string>
    <string name="nfc_read_card">请在NFC区域放置一卡通</string>
    <string name="visit_reason">来访理由</string>
    <string name="visitors_photo">访客照片</string>
    <string name="qsrlxdh">请输入联系电话</string>
    <string name="car_no">车牌号码</string>
    <string name="qsrcph">请输入车牌号</string>
    <string name="leave_time">离校时间</string>
    <string name="qxzlxsj">请选择离校时间</string>
    <string name="bfdx">拜访对象</string>
    <string name="qsrbfdxxm">请输入拜访对象姓名</string>
    <string name="qsrfwqdz">请输入服务器地址</string>
    <string name="score">分</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="qjxskfznfc">请将学生卡放在NFC区域</string>
    <string name="qsrssh">请输入宿舍号</string>
    <string name="in_school_list">学生返校记录</string>
    <string name="in_school_list_title">%1$s的返校登记</string>
    <string name="in_school_list_class">班&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;级：%1$s%2$s</string>
    <string name="in_school_list_id">学&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号：%1$s</string>
    <string name="in_school_list_bz">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注：%1$s</string>
    <string name="in_school_list_time">返校时间：%1$s</string>
    <string name="outsider_list">外来人员记录</string>
    <string name="outsider_list_title">%1$s的入校申请</string>
    <string name="outsider_list_phone">联系电话：%1$s</string>
    <string name="outsider_list_start_time">登记时间：%1$s</string>
    <string name="outsider_list_out_time">离校时间：%1$s</string>
    <string name="outsider_list_user">拜访人员：%1$s</string>
    <string name="outsider_list_car">车牌号码：%1$s</string>
    <string name="outsider_list_reason">入校理由：%1$s</string>
    <string name="check_bed_task_list">查寝任务列表</string>
    <string name="check_bed_choose_bedroom">选择寝室</string>
    <string name="bc">保存</string>
    <string name="tjhsjwfxg">提交后，数据将无法修改</string>
    <string name="qrsc">确认删除</string>
    <string name="qx">取消</string>
    <string name="ongoing">正在进行</string>
    <string name="over">已结束</string>
    <string name="normal">正常</string>
    <string name="abnormal_no">异常%1$s人</string>
    <string name="await_examine">待查</string>
    <string name="un_examine">未查</string>
    <string name="examine">已查</string>
    <string name="check_bed_task_list_user">检查人员：%1$s</string>
    <string name="check_bed_task_list_loaction">检查位置：%1$s%2$s%3$s%4$s</string>
    <string name="check_bed_task_list_date">检查日期：%1$s</string>
    <string name="check_bed_task_list_time">检查时间：%1$s至%2$s</string>
    <string name="qxzycxs">请选择异常学生</string>
    <string name="meeting_list">会议列表</string>
    <string name="meeting_details">会议详情</string>
    <string name="meeting_user_list">会议签到</string>
    <string name="meeting_list_charge_user">签到负责人：%1$s</string>
    <string name="meeting_list_time">会议时间：%1$s至%2$s</string>
    <string name="meeting_list_check_in_time">签到时间：%1$s至%2$s</string>
    <string name="meeting_list_check_out_time">签退时间：%1$s至%2$s</string>
    <string name="meeting_title">会议标题</string>
    <string name="qsrhybt">请输入会议标题</string>
    <string name="chyy">参会人员</string>
    <string name="initiate_meeting">会议发布</string>
    <string name="meeting_initiate_list">我发布的</string>
    <string name="qdfzr">签到负责人</string>
    <string name="qxzqdfzr">请选择签到负责人</string>
    <string name="hykssj">会议开始时间</string>
    <string name="qxzhykssj">请选择会议开始时间</string>
    <string name="hyjssj">会议结束时间</string>
    <string name="qdkssj">签到开始时间</string>
    <string name="qdjssj">签到结束时间</string>
    <string name="qxzqdkssj">请选择签到开始时间</string>
    <string name="qxzqdjssj">请选择签到结束时间</string>
    <string name="qtkssj">签退开始时间</string>
    <string name="qxzqtkssj">请选择签退开始时间</string>
    <string name="qtjssj">签退结束时间</string>
    <string name="qxzqtjssj">请选择签退结束时间</string>
    <string name="publish">发布</string>
    <string name="pzsc">拍照上传</string>
    <string name="wsjczp">卫生检查照片</string>
    <string name="wsjc">卫生检查</string>
    <string name="supplies_apply_list">物资申请列表</string>
    <string name="supplies_put_list">入库申请列表</string>
    <string name="pingyu">评语:</string>
    <string name="pjjg">评价结果</string>
    <string name="zpjg">自评结果</string>
    <string name="khxq_df">得分:</string>
    <string name="khxq_zdf">总得分: %1$s</string>
    <string name="khxq_rank">名次: %1$s</string>
    <string name="note_list">我的记录</string>
    <string name="note_take">事件记录</string>
    <string name="qiandao">签到</string>
    <string name="qiantui">签退</string>
    <string name="wanc">完成</string>
    <string name="today">今天</string>
    <string name="the_number">数量：</string>
    <string name="the_number_all">数量：%1$s</string>
    <string name="leibie">类&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别</string>
    <string name="sl">数&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;量</string>
    <string name="note_bz">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注</string>
    <string name="jlsj">记录时间</string>
    <string name="cjsj">创建时间</string>
    <string name="note_details">记录详情</string>
    <string name="jlrq">记录日期</string>
    <string name="bj">编辑</string>
    <string name="note_type">设置类别</string>
    <string name="qsrlbmc">请输入类别名称(最多四个字)</string>
    <string name="sqyy">申请原因</string>
    <string name="xzwz">选择物资</string>
    <string name="select">选择</string>
</resources>