<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.yhzc.schooldormitorymobile.ui.login.LoginActivity">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="247dp"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_login_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="25dp"
            android:text="@string/yhdl"
            android:textColor="@color/color1094f5"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imageView3"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="35dp"
            android:drawableStart="@mipmap/ic_account"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/qsrzh"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="@color/color333333"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:drawableStart="@mipmap/ic_password"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"

            android:hint="@string/qshirumima"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/color333333"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_account"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/et_http"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:drawableStart="@mipmap/ic_net"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/qsrfwqdz"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="@color/color333333"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            tools:ignore="LabelFor" />



        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            android:background="@drawable/frame_1094f5_radius_8dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_http" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#E8F3FD"
            android:gravity="center"
            android:text="@string/yl_school"
            android:textColor="@color/color1094f5"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>