<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.yhzc.schooldormitorymobile.ui.Personal.InformationChageActivity">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:inputType="phone"
            android:hint="@string/qsrsjhm"
            android:textSize="14sp"
            android:textColor="@color/color333333"
            android:textColorHint="@color/color999999"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:hint="@string/qsryx"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:textColor="@color/color333333"
            android:textColorHint="@color/color999999"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_phone"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_send"
            android:layout_width="301dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/frame_1094f5_radius_8dp"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>